<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        
    <modelVersion>4.0.0</modelVersion>
    <groupId>es.ucm.fdi</groupId>
    <artifactId>ac</artifactId>
    <version>2.1.6-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>A source-code copy detector</description>
    
    <modules>
        <module>clover</module>
        <module>ac-lexers</module>        
        <module>ac-core</module>              	
        <module>ac-ui</module>
    </modules>    
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <connection>scm:git:git://github.com/manuel-freire/ac2</connection>
        <developerConnection>scm:git:git://github.com/manuel-freire/ac2</developerConnection>
        <tag>HEAD</tag>
        <url>http://github.com/manuel-freire/ac2</url>
    </scm>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <!-- 
                Manage the licenses in the source files. 
                Note: this is horrible at updating existing licenses, 
                and also fails at respecting exclusions. Will not use again.
            -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>4.1</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>${maven.multiModuleProjectDirectory}/etc/HEADER.txt</header>
                            <excludes>
                                <exclude>jedit/**.*</exclude>
                                <exclude>lexers/**.*</exclude>
                                <exclude>resources/**.*</exclude>
                                <exclude>*.*</exclude>
                                <exclude>**/.*</exclude>
                                <exclude>**/*.txt</exclude>
                                <exclude>**/*.form</exclude>
                                <exclude>**/*.g</exclude>
                                <exclude>**/*.xml</exclude>
                                <exclude>**/*.properties</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
                <executions>
                    <execution>
                        <id>check-headers</id>
                        <phase>verify</phase>
                        <goals>
                            <!-- <goal>format</goal> -->
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
   
            <!-- Java formatter -->
            <plugin>
                <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
                <artifactId>maven-java-formatter-plugin</artifactId>
                <version>0.3.1</version>
                <configuration>
                    <compilerCompliance>1.8</compilerCompliance>
                    <compilerSource>1.8</compilerSource>
                    <!-- note that this is only launched from child modules -->
                    <configFile>${project.parent.basedir}/etc/formatter.xml</configFile>
                    <lineEnding>KEEP</lineEnding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Compilation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>

            <!-- packaging -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <configuration>
                    <shortRevisionLength>5</shortRevisionLength>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
   
    <!-- common dependencies -->
    <dependencyManagement>
        <dependencies>
            <!-- testing -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>3.8.1</version>
                <scope>test</scope>
            </dependency>
            <!-- logging, using log4j2 directly -->
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>2.17.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.17.1</version>
            </dependency>
            <!-- logging, via commons-logging bridge -->
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>1.2</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-jcl</artifactId>
                <version>2.17.1</version>
            </dependency>
            <!-- xml-backed persistence -->
            <dependency>
                <groupId>org.jdom</groupId>
                <artifactId>jdom2</artifactId>
                <version>2.0.5</version>
            </dependency>               
        </dependencies>    
    </dependencyManagement>
</project>
